@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-08T01:26:31Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 20,
+  "timestamp" : "2022-05-08T08:21:05Z",
+  "count" : 4,
+  "count_minmax" : [ 0, 4 ],
+  "count_prev_day_inc" : 24,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 5,
+  "uniques" : 3,
+  "uniques_minmax" : [ 0, 3 ],
+  "uniques_prev_day_inc" : 8,
   "uniques_prev_day_dec" : 0
 }
