@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T01:26:31Z",
+  "timestamp" : "2022-05-08T08:21:05Z",
   "count_outdated" : 138,
   "uniques_outdated" : 94,
-  "count" : 226,
-  "uniques" : 138,
+  "count" : 230,
+  "uniques" : 141,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 0, 24 ],
       "uniques": 8,
       "uniques_minmax": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 0, 3 ]
     }
   ]
 }
