@@ -1,6 +1,6 @@
 {
-  "count": 88,
-  "uniques": 19,
+  "count": 92,
+  "uniques": 20,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 24,
       "uniques": 8
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
