@@ -1,3 +1,9 @@
+2022-05-08T08:21:05Z:
+* notice: last 14d: all unq: 92 20
+* notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 226 138
+* notice: next accum: outdated-all outdated-unq / all unq: 138 94 / 230 141
+* notice: prev json diff // prev day diff: unq all: +3 +4 / -0 -0 // +8 +24 / -0 -0
+
 2022-05-08T01:26:31Z:
 * notice: last 14d: all unq: 88 19
 * notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 206 133
